// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ArchivedBadge Snapshot Testing matches snapshot with default props 1`] = `
<span
  aria-label="This repository has been archived and is read-only"
  class="text-sm px-3 py-1  inline-flex items-center gap-1.5 rounded-full border border-yellow-600 bg-yellow-50 font-medium text-yellow-800 dark:border-yellow-500 dark:bg-yellow-900/30 dark:text-yellow-400"
  title="This repository has been archived and is read-only"
>
  <i
    class="h-3 w-3"
    data-testid="archive-icon"
  />
  Archived
</span>
`;

exports[`ArchivedBadge Snapshot Testing matches snapshot with large size and icon 1`] = `
<span
  aria-label="This repository has been archived and is read-only"
  class="px-4 py-2 text-base  inline-flex items-center gap-1.5 rounded-full border border-yellow-600 bg-yellow-50 font-medium text-yellow-800 dark:border-yellow-500 dark:bg-yellow-900/30 dark:text-yellow-400"
  title="This repository has been archived and is read-only"
>
  <i
    class="h-3 w-3"
    data-testid="archive-icon"
  />
  Archived
</span>
`;

exports[`ArchivedBadge Snapshot Testing matches snapshot with small size 1`] = `
<span
  aria-label="This repository has been archived and is read-only"
  class="px-2 py-1 text-xs  inline-flex items-center gap-1.5 rounded-full border border-yellow-600 bg-yellow-50 font-medium text-yellow-800 dark:border-yellow-500 dark:bg-yellow-900/30 dark:text-yellow-400"
  title="This repository has been archived and is read-only"
>
  Archived
</span>
`;
